--- a/XFDemo/XFDemo/Views/MainView.xaml
+++ b/XFDemo/XFDemo/Views/MainView.xaml
@@ -4,6 +4,9 @@
              xmlns:forms="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
              Title="Home"
              x:Class="XFDemo.Views.MainView">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="New" Clicked="New_Clicked"/>
+    </ContentPage.ToolbarItems>
     <ListView x:Name="ListViewDoctor"
               HasUnevenRows="True"
               SelectionMode="None"
@@ -12,7 +15,7 @@
             <DataTemplate>
                 <ViewCell>
                     <ViewCell.ContextActions>
-                        <MenuItem Text="Delete" />
+                        <MenuItem Text="Delete" Clicked="Delete_Clicked"/>
                     </ViewCell.ContextActions>
                     <Grid Padding="5">
                         <Grid.ColumnDefinitions>
